--- a/glossary.tex
+++ b/glossary.tex
@@ -11,6 +11,7 @@
 \newacronym[longplural={Average Accuracy}]{aa}{AA}{Average Accuracy}
 \newacronym[longplural={Axis-Aligned Bounding Box}]{aabb}{AABB}{Axis-Aligned Bounding Box}
 \newacronym[longplural={Back-Projection MRAE}]{bpmrae}{BPMRAE}{Back-Projection MRAE}
+\newacronym[longplural={Best Next View}]{bnv}{BNV}{Best Next View}
 \newacronym[longplural={Bidirectional Reflectance Distribution Function}]{brdf}{BRDF}{Bidirectional Reflectance Distribution Function}
 \newacronym[longplural={Bidirectional Scatter Distribution Function}]{bsdf}{BSDF}{Bidirectional Scatter Distribution Function}
 \newacronym[longplural={Bidirectional Scattering Surface Distribution Function}]{bssdf}{BSSDF}{Bidirectional Scattering Surface Distribution Functions}
@@ -22,6 +23,7 @@
 \newacronym[longplural={Computational Geometry Algorithms Library}]{cgal}{CGAL}{Computational Geometry Algorithms Library}
 \newacronym[longplural={China–Brazil Earth Resources Satellite}]{cbers}{CBERS}{China–Brazil Earth Resources Satellite}
 \newacronym[longplural={Charge-coupled Devices}]{ccd}{CCD}{Charge-coupled Devices}
+\newacronym[longplural={Classic Monte Carlo}]{cmc}{CMC}{Classic Monte Carlo}
 \newacronym[longplural={Competitive Adaptive Reweighted Sampling}]{cars}{CARS}{Competitive Adaptive Reweighted Sampling}
 \newacronym[longplural={Complementary Metal-Oxide}]{cmos}{CMOS}{Complementary Metal-Oxide}
 \newacronym[longplural={Computer-aided Design}]{cad}{CAD}{Computer-aided Design}
@@ -83,6 +85,7 @@
 \newacronym[longplural={Level of Coverage}]{loc}{LOC}{Level of Coverage}
 \newacronym[longplural={Light Detection and Ranging}]{lidar}{LiDAR}{Light Detection and Ranging}
 \newacronym[longplural={Linear Mixture Models}]{lmm}{LMM}{Linear Mixture Models}
+\newacronym[longplural={Local Search}]{ls}{LS}{Local Search}
 \newacronym[longplural={Long Short-Term Memory}]{lstm}{LSTM}{Long Short-Term Memory}
 \newacronym[longplural={Long-wave Infrared}]{lwir}{LWIR}{Long-wave Infrared}
 \newacronym[longplural={Long-wave}]{lw}{LW}{Long-wave}
@@ -112,6 +115,7 @@
 \newacronym[longplural={Overall Accuracy}]{oa}{OA}{Overall Accuracy}
 \newacronym[longplural={Partially Least Square}]{pls}{PLS}{Partially Least Square}
 \newacronym[longplural={Partial Least-Square Discriminant Analysis}]{plsda}{PLS-DA}{Partial Least-Square Discriminant Analysis}
+\newacronym[longplural={Particle Swarm Optimization}]{pso}{PSO}{Particle Swarm Optimization}
 \newacronym[longplural={Peak Signal-to-Noise Ratio}]{psnr}{PSNR}{Peak Signal-to-Noise Ratio}
 \newacronym[longplural={Perspective n Point}]{pnp}{PnP}{Perspective n Point}
 \newacronym[longplural={Physically-based Rendering}]{pbr}{PBR}{Physically-based Rendering}
@@ -153,6 +157,7 @@
 \newacronym[longplural={Successive Projection Algorithm}]{spa}{SPA}{Successive Projection Algorithm}
 \newacronym[longplural={Support Vector Machine}]{svm}{SVM}{Support Vector Machine}
 \newacronym[longplural={Surface Area Heuristic}]{sah}{SAH}{Surface Area Heuristic}
+\newacronym[longplural={Tabu Search}]{ts}{TS}{Tabu Search}
 \newacronym[longplural={Tag Image File Format}]{tiff}{TIFF}{Tag Image File Format}
 \newacronym[longplural={Television and Infrared Observation Satellite}]{tiros}{TIROS}{Television and Infrared Observation Satellite}
 \newacronym[longplural={Terrestrial Laser Scanning}]{tls}{TLS}{Terrestrial Laser Scanning}
