--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,107 @@
 
+@article{teixeira_systematic_2023,
+	title = {A {Systematic} {Review} on {Automatic} {Insect} {Detection} {Using} {Deep} {Learning}},
+	volume = {13},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2077-0472},
+	url = {https://www.mdpi.com/2077-0472/13/3/713},
+	doi = {10.3390/agriculture13030713},
+	abstract = {Globally, insect pests are the primary reason for reduced crop yield and quality. Although pesticides are commonly used to control and eliminate these pests, they can have adverse effects on the environment, human health, and natural resources. As an alternative, integrated pest management has been devised to enhance insect pest control, decrease the excessive use of pesticides, and enhance the output and quality of crops. With the improvements in artificial intelligence technologies, several applications have emerged in the agricultural context, including automatic detection, monitoring, and identification of insects. The purpose of this article is to outline the leading techniques for the automated detection of insects, highlighting the most successful approaches and methodologies while also drawing attention to the remaining challenges and gaps in this area. The aim is to furnish the reader with an overview of the major developments in this field. This study analysed 92 studies published between 2016 and 2022 on the automatic detection of insects in traps using deep learning techniques. The search was conducted on six electronic databases, and 36 articles met the inclusion criteria. The inclusion criteria were studies that applied deep learning techniques for insect classification, counting, and detection, written in English. The selection process involved analysing the title, keywords, and abstract of each study, resulting in the exclusion of 33 articles. The remaining 36 articles included 12 for the classification task and 24 for the detection task. Two main approaches—standard and adaptable—for insect detection were identified, with various architectures and detectors. The accuracy of the classification was found to be most influenced by dataset size, while detection was significantly affected by the number of classes and dataset size. The study also highlights two challenges and recommendations, namely, dataset characteristics (such as unbalanced classes and incomplete annotation) and methodologies (such as the limitations of algorithms for small objects and the lack of information about small insects). To overcome these challenges, further research is recommended to improve insect pest management practices. This research should focus on addressing the limitations and challenges identified in this article to ensure more effective insect pest management.},
+	language = {en},
+	number = {3},
+	urldate = {2023-04-24},
+	journal = {Agriculture},
+	author = {Teixeira, Ana Cláudia and Ribeiro, José and Morais, Raul and Sousa, Joaquim J. and Cunha, António},
+	month = mar,
+	year = {2023},
+	note = {Number: 3
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {deep learning, insect classification, insect detection, insects traps, smart pest monitoring},
+	pages = {713},
+}
+
+@article{banfi_narrating_2023,
+	title = {Narrating {Ancient} {Roman} {Heritage} through {Drawings} and {Digital} {Architectural} {Representation}: {From} {Historical} {Archives}, {UAV} and {LIDAR} to {Virtual}-{Visual} {Storytelling} and {HBIM} {Projects}},
+	volume = {7},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2504-446X},
+	shorttitle = {Narrating {Ancient} {Roman} {Heritage} through {Drawings} and {Digital} {Architectural} {Representation}},
+	url = {https://www.mdpi.com/2504-446X/7/1/51},
+	doi = {10.3390/drones7010051},
+	abstract = {One of the main objectives of today’s archaeological sites and museums is the development of research, understood as the interpretation and contextualisation of tangible and intangible cultural heritage to broaden the knowledge and accessibility of archaeological parks often unknown to visitors and the public on a large scale. In this perspective, the Appia Antica Archaeological Park aims to support research in digitising infrastructures and archaeological contexts of high historical and cultural value to plan short- and medium-term preservation and maintenance projects. In this context, unmanned aerial vehicles (UAVs) are tools with enormous potential in survey, inspection and digitisation, providing the basis for the subsequent phases of data interpretation, representation and material analysis. Thanks to the photorealistic reconstruction of dense structure from motion (DSfM) in the application of structural inspections, today it is possible to intercept the geometry and material conditions of small, medium and large structures, reducing the costs of inspections, limiting the interruption of the public and providing professionals and visitors with a better volumetric understanding of the system. However, inserting information that gradually accumulates throughout the process requires advanced 3D digital representation techniques, such as HBIM (historic building information modelling), scan-to-BIM approach and interactive forms, such as virtual and augmented reality (VR-AR). For these reasons, this study summarises the experience and lessons learned from the UAV inspection of three research case studies at archaeological, architectural, and infrastructure scales to increase awareness of the Roman-built heritage.},
+	language = {en},
+	number = {1},
+	urldate = {2023-04-18},
+	journal = {Drones},
+	author = {Banfi, Fabrizio and Roascio, Stefano and Mandelli, Alessandro and Stanga, Chiara},
+	month = jan,
+	year = {2023},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {HBIM, Roman heritage, UAV, architectural representation, drawing, drones, interpretation, scan-to-BIM, virtual museum, virtual-visual storytelling},
+	pages = {51},
+}
+
+@article{richa_adasplats_2022,
+	title = {{AdaSplats}: {Adaptive} {Splatting} of {Point} {Clouds} for {Accurate} {3D} {Modeling} and {Real}-{Time} {High}-{Fidelity} {LiDAR} {Simulation}},
+	volume = {14},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	shorttitle = {{AdaSplats}},
+	url = {https://www.mdpi.com/2072-4292/14/24/6262},
+	doi = {10.3390/rs14246262},
+	abstract = {LiDAR sensors provide rich 3D information about their surroundings and are becoming increasingly important for autonomous vehicles tasks such as localization, semantic segmentation, object detection, and tracking. Simulation accelerates the testing, validation, and deployment of autonomous vehicles while also reducing cost and eliminating the risks of testing in real-world scenarios. We address the problem of high-fidelity LiDAR simulation and present a pipeline that leverages real-world point clouds acquired by mobile mapping systems. Point-based geometry representations, more specifically splats (2D oriented disks with normals), have proven their ability to accurately model the underlying surface in large point clouds, mainly with uniform density. We introduce an adaptive splat generation method that accurately models the underlying 3D geometry to handle real-world point clouds with variable densities, especially for thin structures. Moreover, we introduce a fast LiDAR sensor simulator, working in the splatted model, that leverages the GPU parallel architecture with an acceleration structure while focusing on efficiently handling large point clouds. We test our LiDAR simulation in real-world conditions, showing qualitative and quantitative results compared to basic splatting and meshing techniques, demonstrating the interest of our modeling technique.},
+	language = {en},
+	number = {24},
+	urldate = {2023-04-18},
+	journal = {Remote Sensing},
+	author = {Richa, Jean Pierre and Deschaud, Jean-Emmanuel and Goulette, François and Dalmasso, Nicolas},
+	month = jan,
+	year = {2022},
+	note = {Number: 24
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {3D modeling, LiDAR simulation, point clouds, ray tracing, splatting, surface reconstruction},
+	pages = {6262},
+}
+
+@article{angel_automated_2020,
+	title = {Automated {Georectification} and {Mosaicking} of {UAV}-{Based} {Hyperspectral} {Imagery} from {Push}-{Broom} {Sensors}},
+	volume = {12},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/12/1/34},
+	doi = {10.3390/rs12010034},
+	abstract = {Hyperspectral systems integrated on unmanned aerial vehicles (UAV) provide unique opportunities to conduct high-resolution multitemporal spectral analysis for diverse applications. However, additional time-consuming rectification efforts in postprocessing are routinely required, since geometric distortions can be introduced due to UAV movements during flight, even if navigation/motion sensors are used to track the position of each scan. Part of the challenge in obtaining high-quality imagery relates to the lack of a fast processing workflow that can retrieve geometrically accurate mosaics while optimizing the ground data collection efforts. To address this problem, we explored a computationally robust automated georectification and mosaicking methodology. It operates effectively in a parallel computing environment and evaluates results against a number of high-spatial-resolution datasets (mm to cm resolution) collected using a push-broom sensor and an associated RGB frame-based camera. The methodology estimates the luminance of the hyperspectral swaths and coregisters these against a luminance RGB-based orthophoto. The procedure includes an improved coregistration strategy by integrating the Speeded-Up Robust Features (SURF) algorithm, with the Maximum Likelihood Estimator Sample Consensus (MLESAC) approach. SURF identifies common features between each swath and the RGB-orthomosaic, while MLESAC fits the best geometric transformation model to the retrieved matches. Individual scanlines are then geometrically transformed and merged into a single spatially continuous mosaic reaching high positional accuracies only with a few number of ground control points (GCPs). The capacity of the workflow to achieve high spatial accuracy was demonstrated by examining statistical metrics such as RMSE, MAE, and the relative positional accuracy at 95\% confidence level. Comparison against a user-generated georectification demonstrates that the automated approach speeds up the coregistration process by 85\%.},
+	language = {en},
+	number = {1},
+	urldate = {2023-03-01},
+	journal = {Remote Sensing},
+	author = {Angel, Yoseline and Turner, Darren and Parkes, Stephen and Malbeteau, Yoann and Lucieer, Arko and McCabe, Matthew F.},
+	month = jan,
+	year = {2020},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {UAV, georectification, hyperspectral imaging, mosaicking, push-broom},
+	pages = {34},
+}
+
+@article{akhoundi_khezrabad_new_2022,
+	title = {A new approach for geometric correction of {UAV}-based pushbroom images through the processing of simultaneously acquired frame images},
+	volume = {199},
+	issn = {0263-2241},
+	url = {https://www.sciencedirect.com/science/article/pii/S0263224122006613},
+	doi = {10.1016/j.measurement.2022.111431},
+	abstract = {Video-assisted navigation is a strategy that hyperspectral camera manufacturers usually use to deal with the geometric distortions imposed on raw pushbroom images, due to perturbations. In this strategy, a simultaneous video is captured during a pushbroom raw image acquisition. This article proposes an automatic geometric correction method applicable to the sensors utilizing this strategy that does not need ground control data. This method starts with an inter-calibration procedure between the two sensors, which allows using frame-based images in the correction procedure. Then, the method uses sequential transformations among consecutive video frames to produce geometrically corrected products. The experimental results demonstrate that the proposed method's sequential nature makes it so flexible that it causes more reduction in the scenes' random geometric distortions than the common methods. Hence, the accuracy of 2D and 3D transformations relating the image and the ground spaces is increased by 66.9\% compared to the raw pushbroom images.},
+	language = {en},
+	urldate = {2022-10-17},
+	journal = {Measurement},
+	author = {Akhoundi Khezrabad, Mojtaba and Valadan Zoej, Mohammad Javad and Safdarinezhad, Alireza},
+	month = aug,
+	year = {2022},
+	keywords = {Camera calibration, Geometric correction, Hyperspectral images, Pushbroom images, Video-assisted navigation},
+	pages = {111431},
+}
+
 @article{hendrich_ray_2019,
 	title = {Ray {Classification} for {Accelerated} {BVH} {Traversal}},
 	volume = {38},
@@ -4167,27 +4270,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	year = {2019},
 	keywords = {3D point cloud, compression, survey},
 	pages = {1--9},
-}
-
-@article{angel_automated_2020,
-	title = {Automated {Georectification} and {Mosaicking} of {UAV}-{Based} {Hyperspectral} {Imagery} from {Push}-{Broom} {Sensors}},
-	volume = {12},
-	copyright = {http://creativecommons.org/licenses/by/3.0/},
-	issn = {2072-4292},
-	url = {https://www.mdpi.com/2072-4292/12/1/34},
-	doi = {10.3390/rs12010034},
-	abstract = {Hyperspectral systems integrated on unmanned aerial vehicles (UAV) provide unique opportunities to conduct high-resolution multitemporal spectral analysis for diverse applications. However, additional time-consuming rectification efforts in postprocessing are routinely required, since geometric distortions can be introduced due to UAV movements during flight, even if navigation/motion sensors are used to track the position of each scan. Part of the challenge in obtaining high-quality imagery relates to the lack of a fast processing workflow that can retrieve geometrically accurate mosaics while optimizing the ground data collection efforts. To address this problem, we explored a computationally robust automated georectification and mosaicking methodology. It operates effectively in a parallel computing environment and evaluates results against a number of high-spatial-resolution datasets (mm to cm resolution) collected using a push-broom sensor and an associated RGB frame-based camera. The methodology estimates the luminance of the hyperspectral swaths and coregisters these against a luminance RGB-based orthophoto. The procedure includes an improved coregistration strategy by integrating the Speeded-Up Robust Features (SURF) algorithm, with the Maximum Likelihood Estimator Sample Consensus (MLESAC) approach. SURF identifies common features between each swath and the RGB-orthomosaic, while MLESAC fits the best geometric transformation model to the retrieved matches. Individual scanlines are then geometrically transformed and merged into a single spatially continuous mosaic reaching high positional accuracies only with a few number of ground control points (GCPs). The capacity of the workflow to achieve high spatial accuracy was demonstrated by examining statistical metrics such as RMSE, MAE, and the relative positional accuracy at 95\% confidence level. Comparison against a user-generated georectification demonstrates that the automated approach speeds up the coregistration process by 85\%.},
-	language = {en},
-	number = {1},
-	urldate = {2023-03-01},
-	journal = {Remote Sensing},
-	author = {Angel, Yoseline and Turner, Darren and Parkes, Stephen and Malbeteau, Yoann and Lucieer, Arko and McCabe, Matthew F.},
-	month = jan,
-	year = {2020},
-	note = {Number: 1
-Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {UAV, georectification, hyperspectral imaging, mosaicking, push-broom},
-	pages = {34},
 }
 
 @article{cao_object-based_2018,
@@ -11914,23 +11996,6 @@ Type: Report},
 	year = {2022},
 	keywords = {Aerial imagery, Artificial neural network, Object-based image analysis, Precision viticulture, Random forest, Support vector machine},
 	pages = {106905},
-}
-
-@article{akhoundi_khezrabad_new_2022,
-	title = {A new approach for geometric correction of {UAV}-based pushbroom images through the processing of simultaneously acquired frame images},
-	volume = {199},
-	issn = {0263-2241},
-	url = {https://www.sciencedirect.com/science/article/pii/S0263224122006613},
-	doi = {10.1016/j.measurement.2022.111431},
-	abstract = {Video-assisted navigation is a strategy that hyperspectral camera manufacturers usually use to deal with the geometric distortions imposed on raw pushbroom images, due to perturbations. In this strategy, a simultaneous video is captured during a pushbroom raw image acquisition. This article proposes an automatic geometric correction method applicable to the sensors utilizing this strategy that does not need ground control data. This method starts with an inter-calibration procedure between the two sensors, which allows using frame-based images in the correction procedure. Then, the method uses sequential transformations among consecutive video frames to produce geometrically corrected products. The experimental results demonstrate that the proposed method's sequential nature makes it so flexible that it causes more reduction in the scenes' random geometric distortions than the common methods. Hence, the accuracy of 2D and 3D transformations relating the image and the ground spaces is increased by 66.9\% compared to the raw pushbroom images.},
-	language = {en},
-	urldate = {2022-10-17},
-	journal = {Measurement},
-	author = {Akhoundi Khezrabad, Mojtaba and Valadan Zoej, Mohammad Javad and Safdarinezhad, Alireza},
-	month = aug,
-	year = {2022},
-	keywords = {Camera calibration, Geometric correction, Hyperspectral images, Pushbroom images, Video-assisted navigation},
-	pages = {111431},
 }
 
 @article{singh_bibliometric_2022,
