--- a/glossary.tex
+++ b/glossary.tex
@@ -30,7 +30,7 @@
 \newacronym[longplural={Computer Graphics}]{cg}{CG}{Computer Graphics}
 \newacronym[longplural={Constrained Energy Minimization}]{cem}{CEM}{Constrained Energy Minimization}
 \newacronym[longplural={Control Point}]{cp}{CP}{Control Point}
-\newacronym[longplural={Convolutional Autoencoder}]{cnn-ae}{CNN-AEE}{Convolutional Autoencoder}
+\newacronym[longplural={Convolutional Autoencoder}]{cnn-ae}{CNN-AE}{Convolutional Autoencoder}
 \newacronym[longplural={Convolutional Neural Network}]{cnn}{CNN}{Convolutional Neural Network}
 \newacronym[longplural={Correlation Coefficient}]{cc}{CC}{Correlation Coefficient}
 \newacronym[longplural={Cross-Correlogram Spectral Matching}]{ccsm}{CCSM}{Cross-Correlogram Spectral Matching}
@@ -56,6 +56,7 @@
 \newacronym[longplural={Global Navigation Satellite System}]{gnss}{GNSS}{Global Navigation Satellite System}
 \newacronym[longplural={Global Positioning System}]{gps}{GPS}{Global Positioning System}
 \newacronym[longplural={General-Purpose Computing on Graphics Processing Units}]{gpgpu}{GPGPU}{General-Purpose Computing on Graphics Processing Units}
+\newacronym[longplural={Gradient Descent}]{gd}{GD}{Gradient Descent}
 \newacronym[longplural={Graphics Processing Unit}]{gpu}{GPU}{Graphics Processing Unit}
 \newacronym[longplural={Graphical User Interface}]{gui}{GUI}{Graphical User Interface}
 \newacronym[longplural={Ground Control Points}]{gcp}{GCP}{Ground Control Points}
@@ -135,6 +136,7 @@
 \newacronym[longplural={Real-Time Kinematic}]{rtk}{RTK}{Real-Time Kinematic}
 \newacronym[longplural={Red, Green, Blue}]{rgb}{RGB}{Red, Green, Blue}
 \newacronym[longplural={RGB-Depth}]{rgbd}{RGB-D}{RGB-Depth}
+\newacronym[longplural={Rectified Linear Unit}]{relu}{ReLU}{Rectified Linear Unit}
 \newacronym[longplural={Red-Edge}]{reg}{REG}{Red-Edge}
 \newacronym[longplural={Remote Sensing}]{rs}{RS}{Remote Sensing}
 \newacronym[longplural={Root Mean Square Error}]{rmse}{RMSE}{Root Mean Square Error}
