--- a/thesis.tex
+++ b/thesis.tex
@@ -243,20 +243,21 @@
 \blankPage
 \pagelayout{smallmargin}
 \input{chapters/abstract.tex}
+\blankPage
+\input{chapters/abstract_spanish.tex}
 \pagelayout{wide}
 
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
-\oddChapter
+\blankPage
 \input{chapters/publications.tex}
 
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGMENTS
 %----------------------------------------------------------------------------------------
 
-\oddChapter
 \input{chapters/acknowledgments.tex}
 
 %----------------------------------------------------------------------------------------
@@ -330,7 +331,7 @@
 \oddChapter
 \partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
 
-% \input{chapters/introduction.tex}
+\input{chapters/introduction.tex}
 % \input{chapters/fundamentals.tex}
 % \input{chapters/context.tex}
 
@@ -360,7 +361,7 @@
 
 % \input{chapters/thermal_point_cloud.tex}
 % \input{chapters/multi_thermal_point_cloud}
-\input{chapters/hyper_point_cloud}
+% \input{chapters/hyper_point_cloud}
 
 %----------------------------------------------------------------------------------------
 %	PART IV
@@ -370,11 +371,12 @@
 \chapterBackground{figs/chapters/b5/Chapter4_01.png}{figs/chapters/b5/Chapter4_02.png}{DailyArt}{Stone lion}{Sketchfab}{black}
 
 \oddChapter
-\partIntro{IV}{Simulations and planning}{This part is split into three chapters. The first one simulates an efficient \acrshort{lidar} sensor aimed at providing large point cloud datasets for the training of Deep Learning models. Then, the \acrshort{lidar} data source is further enriched with intensity by taking into account the surface \acrshort{brdf}. Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. }
+\partIntro{IV}{Generation of synthetic data}{This part is split into two chapters. The first one covers the efficient simulation of a \acrshort{lidar} sensor aimed at providing large point cloud datasets for the training of Deep Learning models. Then, the \acrshort{lidar} datasets are further enriched with intensity by modelling the surfaces' \acrshort{brdf}. 
+% Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. 
+}
 
 % \input{chapters/lidar_remote_sensing.tex}
 % \input{chapters/lidar_intensity.tex}
-% \input{chapters/lidar_optimization}
 
 %----------------------------------------------------------------------------------------
 %	PART V
@@ -384,10 +386,11 @@
 \chapterBackground{figs/chapters/b5/Chapter5_01.png}{figs/chapters/b5/Chapter5_02.png}{Georg Klein}{Viking ship}{Sketchfab}{white}
 
 \oddChapter
-\partIntro{V}{Data analysis}{This chapter comprises work aimed at analyzing previously processed data, rather than collecting and fusing it to shape 3D results. The methodologies explained in previous chapters are applied to these analyses as some of them require observing and extracting features over point clouds and large hyperspectral datasets. }
+\partIntro{V}{Applications of \\remotely sensed data}{This chapter comprises several case studies where previously processed and generated data are applied to the planning of acquisition processes as well as to the detection and classification of features. First, the synthetic \acrshort{lidar} data will be used for the planning of scans, in order to optimize and minimize the locations required to monitor buildings. Then, thermographic point clouds are applied to the detection of landscape features that could be related to buried remains of an archaeological site. Finally, the hyperspectral data of a vineyard plot is corrected to help in the classification of different grapevine varieties using Deep Learning.  }
 
-% \input{chapters/vineyard_classification}
+% \input{chapters/lidar_optimization}
 % \input{chapters/castle_puerta_arenas}
+% \input{chapters/vineyard_classification}
 
 %----------------------------------------------------------------------------------------
 %	PART VI
@@ -429,8 +432,8 @@
 \oddChapter
 \partIntro{VII}{Appendices}{}
 
-% \input{chapters/preamble_spanish}
-% \input{chapters/introduction_spanish}
+\input{chapters/preamble_spanish}
+\input{chapters/introduction_spanish}
 % \input{chapters/conclusions_spanish}
 
 %----------------------------------------------------------------------------------------
