Revise Intro in spanish

--- a/thesis.tex
+++ b/thesis.tex
@@ -402,7 +402,7 @@
 \oddChapter
 \partIntro{VI}{Concluding remarks}{}
 
-% \input{chapters/conclusions.tex}
+\input{chapters/conclusions.tex}
 
 % \pagelayout{wide} % No margins
 % \addpart{Class Options, Commands and Environments}
@@ -434,7 +434,7 @@
 
 \input{chapters/preamble_spanish}
 \input{chapters/introduction_spanish}
-% \input{chapters/conclusions_spanish}
+\input{chapters/conclusions_spanish}
 
 %----------------------------------------------------------------------------------------
 %	COVER
